fix: sidebar not showing on mobile

--- a/style.css
+++ b/style.css
@@ -308,6 +308,7 @@ footer button:hover{
 @media screen and (max-width: 768px){
     .circles{
         scale: 0.25;
+        right: 10px;
     }
 
     html, body {
